src/style.scss
@import '~antd/dist/antd.css';
@import url('https://fonts.googleapis.com/css?family=Comfortaa');
@import '~react-credit-cards/es/styles-compiled.css';

body {
  font-family: Avenir Next, sans-serif;
  background: darken(white, 0.2);
}

.banner_text h1, .banner_text h3 {
  color: #FFFFFF;
  font-weight: bold;
}

.active {
  color: pink;
}

.banner {
  background: url(https://i.imgur.com/mqfC5aZ.png);
  width: 100%;
  height:600px;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  float: right;
}

.banner_text {
  width: 50%;
  height: 145px;
  left: 100px;
  top: 25px;

  font-family: Avenir Next;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 25px;

  color: #FFFFFF;
}

#banner_tag {
  margin-bottom: 20px;
  font-size: 45px;
}

#sub_text{
  font-size: 20px;
}

#logo {
  height: 30px;
  width: 90px;
  position: absolute;
  left: 100px;
  top: 23px;
}

#login {
  position: absolute;
  width: 113px;
  height: 33px;
  right: 50px;
  top: 25px;

  //border: 2px solid #42EEF8;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 40px;
  background-color: rgb(66, 238, 248);  color: #FFFFFF;
  color: #FFFFFF;
  // font-family: Inter UI;
  font-style: normal;
  font-weight: 640;
  line-height: normal;
  text-align: center;
  font-size: 17px;

}

#signup {
  position: absolute;
  width: 80px;
  height: 29px;
  right: 181px;
  top: 25px;
  border: 0px solid #42EEF8;
  font-size: 16px;
  font-weight: 640;

}

#dashboard {
  position: absolute;
  width: 80px;
  height: 29px;
  right: 230px;
  top: 25px;
  margin-right: 0.75%;
  border: 0px solid #42EEF8;
}

#dropdownLink {
   position: absolute;
   right: 134px;
   top: 20px;
   border: 0px solid #42EEF8;
}


#dropdownLink svg {
  width: 32px;
  height: 32px;
  fill: #FFFFFF;
}

#settings_button {
   position: absolute;
   width: 31px;
   height: 31px;
   right: 226px;
   top: 25px;
   margin-right: 0.75%;
   border: 0px solid #42EEF8;
}

#bannerSignUp {
  //border: 2px solid #42EEF8;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 40px;
  background-color: rgb(66, 238, 248);  color: #FFFFFF;
  width: 115px;
  height: 37px;
  font-size: 18px;
  font-weight: 640;
}

#FAQ {
  position: absolute;
  width: 70px;
  height: 29px;
  right: 292px;
  top: 25px;
  border: 0px solid #42EEF8;
  font-size: 16px;
  font-weight: 640;
}

#how {
  position: absolute;
  width: 115px;
  height: 29px;
  right: 425px;
  top: 22px;
  border: 0px solid #42EEF8;
  font-size: 16px;
  font-weight: 640;

}

#firstSection {
  display: flex;
  width: 100%;
  height: 600px;
  align-items: center;
  justify-content: center;
  background-color: #f2f2f2;
}

#sparkSection {
  display: flex;
  width: 100%;
  height: 600px;
  align-items: center;
  justify-content: center;
}

.menu_item {
  margin-top: 20px;
  font-family: Avenir Next;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  padding-top: 4px;

  border: 0px solid #42EEF8;
  background-color: rgba(52, 52, 52, 0);
  color: #FFFFFF;
}

#firstSectionText {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#firstSectionTag {
  font-family: Avenir Next;
  font-style: normal;
  font-weight: normal;
  line-height: normal;
  font-size: 40px;
}

#firstSectionBody {
  width: 400px;
  font-size: 17px;
}

#firstSectionBox {
  display: flex;
  width: auto;
  flex-direction: column;
}

#firstSectionImage {
  height: 450px;
}

#secondSection {
  display: flex;
  width: 100%;
  height: 600px;
  align-items: center;
  justify-content: center;
  background-color: #f2f2f2;
}

#secondSectionImage {
  display: flex;
  flex-direction: row-reverse;
}

#secondSectionBox {
  align-items: center;
  justify-content: center;
  width: 80%;
}

#secondSectionBox h1 {
  text-align: center;
}

#howBanner {
  background-color: #f2f2f2;
  box-sizing: border-box;
  border-radius: 10px;
  color: transparent;
  flex-direction: row;
  border: 2px solid #42EEF8;
}

#howTitle {
  font-weight: normal;
  font-size: 40px;
}

#cardIcon {
  width: 176px;
}

#cashIcon {
  width: 114px;
}

#cashIconDiv {
  height: 176px;
}

#walletIcon {
  width: 112px;
}

#walletIconDiv {
  height: 176px;
}

.iconCol {
  display: flex;
  justify-content: center;
  align-items: center;
}

.iconText {
  color: black;
  display: flex;
  justify-content: center;
}

#howExplainer {
  width: 70%;
  text-align: center;
  font-size: 17px;
}

#howContainer {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 40px;
}

#thirdSectionBox {
  height: 600px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.payment-form-container {
  display: flex;
  justify-content: center;
}
.payment-form {
  max-width: 200px;
  padding-top: 10px;
  display: flex;
  flex-flow: column;
  align-items: center;
  padding: 20px;
  box-shadow: 2px 2px 20px #ededed;
}

.payment-form-button {
  width: 75%;
}

.test-payment {
  display: flex;
  flex-flow: column;
  align-items: center;
}

.test-login {
  display: flex;
  flex-flow: column;
  align-items: center;
  height: 500px;
}

.registration-form {
  //max-width: 300px;
  padding-right: 120px;
}

.login-form {
  max-width: 300px;
}

.login-form-forgot {
  float: right;
}

.login-form-button {
  width: 100%;
}

.test-registration{
  display: flex;
  flex-flow: column;
  align-items: center;
  height: 500px;
}


.iconText p {
  font-size: 17px;
  width: 80%;
  text-align: center;
}

#nav {
  height: 74px;
  width: 100vw;
}

#innerNav {
  height: 74px;
  width: 100vw;
}

#faqFirstSection{
  background-image: url(https://i.imgur.com/H4XL7Is.png);
  background-repeat: no-repeat;
  display: flex;
  width: 100%;
  height: 100%;
  justify-content: center;
  background-color: #f2f2f2;
}

#faqFirstSectionText {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

#faqCollabsible{
  width: 70vw;
}

.faqHead{
  background-color: white;
  font-size: 20px;
  margin-top: 20px;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
  color: #808080;
}

.faqHead:hover{
  background-color: #520d9c;
  font-size: 20px;
  margin-top: 20px;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
  color: white;
  transform: scale(1.1);
}

#faqTitle {
  text-align: center;
  font-size: 60px;
  color: white;
  margin-top: 100px;
}

.faqBody {
  margin-top: 10px;
  padding-top: 14px;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.15);
}

#loginHeader{
  margin-top: 50px;
}

#registrationHeader{
  margin-top: 50px;
}

.active-accordion{
  background-color: #520d9c;
  color: white;
}

#loginBanner{
  width: 1000px;
  height: 500px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
}

.payment-form-container1{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 90vh;
  background-color: #f2f2f2;
}

#loginFormBanner{
  width: 500px;
  background-color: white;
}

.login-form-button{
  background-color: #3c67c3;
}

#dashboardBody {
  display: flex;
  flex-flow: column;
  flex: 1;
}

#newTransactionButton {
  max-width: 150px;
  min-width: 120px;
  align-self: flex-end;
  margin-right: 10%;
  margin-bottom: 20px;
  margin-top: 20px;
}

#mainTable {
  padding-left: 10%;
  padding-right: 10%;
  padding-top: 1%;
}

